--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -120,7 +120,7 @@ body {
     background-color: #130000;
     display: flex;
     gap: 50px;
-    padding: 50 px;
+    padding: 50 px; 
     justify-content: center;
     flex-wrap: wrap;
   }
@@ -151,6 +151,16 @@ body {
     padding: 50px;
     justify-content: center;
     flex-wrap: wrap;
+  }
+  .choraskill {
+    width:500px;
+    padding: 5%;
+  }
+  .skillbox {
+    display: flex;  
+    justify-content: center;
+    align-items: center; 
+    padding: 5%;
   }
   .bar {
     background: #333;
@@ -217,9 +227,15 @@ body {
   color: orangered;
 }
 
+.social-links { 
+  justify-content: center;
+  display: flex;
+}
 .social-links a {
-  display: inline-block;
+  display: flex;
   margin: 0 12px;
+  margin-top: 10px ;
+  width: 50% ;
   color: white;
   text-decoration: none;
   background: orangered;
@@ -234,9 +250,9 @@ body {
 
   
   /* Responsive */
-  @media (max-width: 768px) {
+  @media (min-width: 500px) and (max-width:1000px){
     .about-container {
-      flex-direction: column;
+      flex-direction: column; 
       align-items: center;
     }
   
@@ -244,5 +260,35 @@ body {
       flex-direction: column;
       align-items: center;
     }
+
+    .social-links {
+      display: flex;
+      flex-direction: column;
+   
+      align-items: center;
+    }
+    .social-links a {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px ;
+      width: 50% ;
+    }
+    .skillbox { 
+      flex-direction: column;
+    }
+  }
+
+  @media (max-width:500px){
+    .skillbox { 
+      flex-direction: column;
+      /* padding:10%;
+      width: 30%; */
+    }
+    .choraskill {
+      width: 80% ;
+    }
+    .image img {
+      width: 100%;
+  }
   }
   
