--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -39,7 +39,36 @@ body {
     gap: 60px;
     flex-wrap: wrap;
   }
-  
+
+  /* MOBILE VIEW MENU */
+
+  #menu-toggle {
+    display: none;
+
+  }
+
+  .hamburger {
+  display: flex;
+  position:absolute;
+  right: 5% ;
+  top:5%;
+  font-size: 28px;
+  color: white;
+  cursor: pointer;
+}
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+}
+/* MOBILE VIEW END */
+
   header nav ul li a:hover {
     color: #ff4500;
   }
@@ -250,7 +279,7 @@ body {
 
   
   /* Responsive */
-  @media (min-width: 500px) and (max-width:1000px){
+  @media (min-width: 768px) and (max-width:1000px){
     .about-container {
       flex-direction: column; 
       align-items: center;
@@ -278,7 +307,7 @@ body {
     }
   }
 
-  @media (max-width:500px){
+  @media (max-width:768px){
     .skillbox { 
       flex-direction: column;
       /* padding:10%;
@@ -289,6 +318,24 @@ body {
     }
     .image img {
       width: 100%;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: #111;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    width: 160px;
+  }
+  #menu-toggle:checked + .hamburger + .navbar .nav-links {
+    display: flex;
+  }
+
+  .hamburger {
+    display: block;
   }
   }
   
